Add table of contents (#3)
* Add Table of Contents

* Create autogenerated sidebars

* Update navbar items

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -12,10 +12,11 @@
 	"observability": {
 		"enabled": true
 	},
+	"preview_urls": true,
 	"routes": [
 		{
-		  "pattern": "ebpf.guide",
-		  "custom_domain": true
+			"pattern": "ebpf.guide",
+			"custom_domain": true
 		},
 		{
 			"pattern": "www.ebpf.guide",
