--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -4,7 +4,7 @@
  */
 {
 	"$schema": "node_modules/wrangler/config-schema.json",
-	"name": "bare-metal-networking",
+	"name": "bare-metal-network",
 	"compatibility_date": "2025-08-30",
 	"assets": {
 		"directory": "./build"
